# hms-scene-RTcore-demo

./: .clang-format  .gitignore  Open Source Software Notice.doc  README.md  README_zh.md
android/: build.gradle
android/examples/_template/: CMakeLists.txt  build.gradle
android/examples/base/: CMakeLists.txt
android/examples/hybridRayTracing/: CMakeLists.txt  build.gradle
android/examples/hybridreflection/: CMakeLists.txt  build.gradle
android/examples/triangle/: CMakeLists.txt  build.gradle
android/examples/triangle/src/main/: AndroidManifest.xml
android/examples/triangle/src/main/java/com/huawei/rtcore/vktriangle/: VulkanActivity.java
android/gradle/wrapper/: gradle-wrapper.properties
base/: BufferInfor.h  Log.h  NonCopyable.h  RTATrace.h  TimeStamp.cpp  TimeStamp.h  Utils.cpp  Utils.h  VulkanIBLPipelines.cpp  VulkanIBLPipelines.h  VulkanImageBasedLighting.cpp  VulkanImageBasedLighting.h  VulkanPipelineBase.cpp  VulkanPipelineBase.h  VulkanPipelineCreateFuncMgr.cpp  VulkanPipelineCreateFuncMgr.h  VulkanPipelineFactory.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanScenePipeline.cpp  VulkanScenePipeline.h  VulkanShader.cpp  VulkanShader.h  VulkanSkyboxPipeline.cpp  VulkanSkyboxPipeline.h  VulkanTraceRay.cpp  VulkanTraceRay.h  VulkanVertex.cpp  VulkanVertex.h  common.h  vulkanexamplebase.cpp  vulkanexamplebase.h
data/: CMakeLists.txt
data/models/: H-10w.gltf  H-20w.gltf  H-rotation.gltf
data/shaders/glsl/: CMakeLists.txt  compileshaders.py
data/shaders/glsl/base/: binding.glsl
data/shaders/glsl/hybridRayTracing/: common.glsl  filtercube.vert.spv  fullscreen.frag  fullscreen.frag.spv  genbrdflut.frag.spv  genbrdflut.vert.spv  irradiancecube.frag.spv  pbr.frag.spv  prefilterenvmap.frag.spv  raytracing.glsl  raytracing.vert  raytracing.vert.spv  raytracing_color.frag  raytracing_stats.frag  raytracing_white.frag  scene.vert  scene.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert.spv
data/shaders/glsl/hybridreflection/: common.glsl  filtercube.vert.spv  fullscreen.frag  fullscreen.frag.spv  genbrdflut.frag.spv  generateRay.frag  generateRay.frag.spv  irradiancecube.frag.spv  pbr.frag  pbr.frag.spv  prefilterenvmap.frag.spv  reflection.frag  reflection.frag.spv  scene.vert  scene.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  (+1 more)
examples/hybridRayTracing/: DescSet.cpp  DescSet.h  EventLoop.cpp  EventLoop.h  GraphicPipeline.cpp  GraphicPipeline.h  HybridRayTracing.cpp  HybridRayTracing.h  Pipeline.cpp  Pipeline.h  RayTracingPass.cpp  RayTracingPass.h  VulkanOnscreenPipeline.cpp  VulkanOnscreenPipeline.h
examples/hybridreflection/: HybridReflection.cpp  HybridReflection.h
examples/hybridreflection/examplebase/: VulkanDepthOnlyPipeline.cpp  VulkanDepthOnlyPipeline.h  VulkanGenReflecRayPipeline.cpp  VulkanGenReflecRayPipeline.h  VulkanOffscreenRenderpass.cpp  VulkanOffscreenRenderpass.h  VulkanOnscreenPipeline.cpp  VulkanOnscreenPipeline.h  VulkanReflectionPipeline.cpp  VulkanReflectionPipeline.h
examples/triangle/: RaytracingTriangle.cpp  RaytracingTriangle.h  VulkanTrianglePipeline.cpp  VulkanTrianglePipeline.h
include/: Traversal.h
(+9 files in other folders)
